--- a/style.css
+++ b/style.css
@@ -1,30 +1,19 @@
-a {
-  font-size: 140%;
+#upLeft {
+float: left;
+
 }
-a:hover {
-  font-weight: bold;
+#downLeft {
+float: left;
 }
-a:link {
-  color: yellow;
+#upRight {
+
+float: left;
 }
-a:visited {
-  color: limegreen;
+
+#downRight {
+
+float: left;
 }
-.form {
-  background-color: lightgray;
-  padding: 5px;
-  width: 430px;
-}
-footer {
-  text-align: left;
-  padding-top: 50px;
-}
-#output {
-  padding-top: 20px;
-  font-size: 200%;
-  font-family: 'FantasqueSansMonoRegular';
-  font-weight: bold; 
-}
-p {
-  margin: 0;
+.clear {
+clear: both;
 }
